Fix scrollbar hover and add active state
fix hover scrollbar styles and added active state for track. For this to work scrollbar styles cannot be scoped to work under a particular element

--- a/public/css/body-scrollbar.css
+++ b/public/css/body-scrollbar.css
@@ -1,31 +1,34 @@
-body { /* recreating google keep scrollbar here, using their css */
-  /* TODO - fix the hover selectors not working at all. Seems to be some style conflict below */
+/* recreating google keep scrollbar here, using their css */
+  /* NOTE - if you put these scrollbar classes under any other selector (eg body or dialog or html) then the hover and active states don't work with Chrome browsers at the time of writing (Jan 2026). Therefore scrollbar styles cannot be easily scoped to an element */
   ::-webkit-scrollbar {
     height: 10px;
     overflow: visible;
     width: 16px;
   }
   ::-webkit-scrollbar-corner {
-    background: transparent; /*the corner where vertical and horizontal sliders meet apparently*/
+    background: transparent;
   }
   ::-webkit-scrollbar-button {
-    height: 0; /* the buttons on either end of the scrollbar track (if present) */
+    height: 0;
     width: 0;
   }
   ::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.2);
-    background-clip: padding-box; 
+    background-clip: padding-box;
     border: solid transparent;
     border-width: 1px 1px 1px 6px;
     min-height: 28px;
     padding: 100px 0 0;
-    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
-      inset 0 -1px 0 rgba(0, 0, 0, 0.07);
+    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.07);
   }
   ::-webkit-scrollbar-thumb:hover {
     background-color: rgba(0, 0, 0, 0.4);
     box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.25);
-  }*/
+  }
+  ::-webkit-scrollbar-thumb:active { /* active state is when it is being used, so goes a bit darker when you click on it */
+    background-color: rgba(0,0,0,0.5);
+    box-shadow: inset 1px 1px 3px rgba(0,0,0,.35);
+  }
   ::-webkit-scrollbar-track {
     background-clip: padding-box;
     border: solid transparent;
@@ -35,4 +38,7 @@ body { /* recreating google keep scrollbar here, using their css */
     background-color: rgba(0, 0, 0, 0.05);
     box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.1);
   }
-}
+   ::-webkit-scrollbar-track:active {
+    background-color: rgba(0,0,0,0.05);
+	box-shadow: inset 1px 0 0 rgba(0,0,0,.14),inset -1px 0 0 rgba(0,0,0,.07);
+  }
